[package]
name = "zeroclaw-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive TUI config manager for ZeroClaw."
publish = false

[[bin]]
name = "zeroclaw-tui"
path = "src/main.rs"

[dependencies]
zeroclaw-api = { workspace = true }
zeroclaw-config = { workspace = true, default-features = true }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
async-trait = "0.1"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = { version = "0.30", default-features = true }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.50", default-features = false, features = [
    "rt-multi-thread", "macros", "time", "sync", "net", "io-util", "process",
] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
toml = "1.0"
