[package]
name = "zeroclaw-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive TUI config manager for ZeroClaw."
publish = false

[[bin]]
name = "zeroclaw-tui"
path = "src/main.rs"

[dependencies]
zeroclaw-api = { workspace = true }
zeroclaw-config = { workspace = true, default-features = true }
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
similar = { version = "2", default-features = false, features = ["text"] }
syntect = { version = "5", default-features = false }
two-face = { version = "0.5", default-features = false, features = ["syntect-default-fancy"] }
async-trait = "0.1"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = { version = "0.30", default-features = true }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
tokio = { version = "1.50", default-features = false, features = [
    "rt-multi-thread", "macros", "time", "sync", "net", "io-util", "process", "signal",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pulldown-cmark = { version = "0.13", default-features = false }
mime_guess = "2"
shellexpand = "3.1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
toml = "1.0"
