[package]
name = "zerocode"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Interactive TUI config manager for ZeroClaw."
publish = false

[features]
# Reserved for future SOP-authoring exposure work. The SOP pane is currently
# unreachable from navigation in every build (`Mode::Sop` is absent from the
# mode bar); the web dashboard ships as the first experimental release. This
# flag gates no exposure today and is kept as the seam for re-enabling later.
default = []
sop-authoring = []

[[bin]]
name = "zerocode"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tempfile = "3"
similar = { version = "2", default-features = false, features = ["text"] }
inkjet = { version = "0.11", default-features = false, features = [
    "language-rust", "language-python", "language-javascript", "language-typescript",
    "language-json", "language-toml", "language-yaml", "language-go", "language-c",
    "language-cpp", "language-html", "language-css", "language-bash",
    "language-sql", "language-ruby", "language-java", "language-kotlin",
    "language-swift", "language-lua", "language-dockerfile", "language-tsx",
    "language-jsx", "language-scss", "language-diff", "language-elixir",
    "language-hcl", "language-zig", "language-scala", "language-php",
    "language-dart",
] }
async-trait = "0.1"
crossterm = { version = "0.29", features = ["event-stream"] }
ratatui = { version = "0.30", default-features = true, features = ["unstable-rendered-line-info"] }
serde = { version = "1.0", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
unicode-width = "0.2"
unicode-segmentation = "1"
toml = "1.0"
tokio = { version = "1.50", default-features = false, features = [
    "rt-multi-thread", "macros", "time", "sync", "net", "io-util", "process", "signal",
] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
rustls-pemfile = "2"
sha2 = "0.10"
hex = "0.4"
# Public roots for the outer-mTLS variant when a client also presents an outer
# cert against a public-CA relay (the plain default still uses tungstenite's
# built-in roots with no client cert).
webpki-roots = "0.26"
tokio-rustls = { version = "0.26.4", default-features = false, features = ["logging", "tls12", "ring"] }
# Client-side enrollment uses local P-256 CSR generation and relay wire helpers
# so zerocode remains an RPC-only surface and does not link zeroclaw-* crates.
rcgen = { version = "0.13", default-features = false, features = ["ring", "pem", "x509-parser"] }
# Wipe the in-memory client private key on drop (it is generated locally, written
# 0600, and never transmitted).
zeroize = "1.8"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }
pulldown-cmark = { version = "0.13", default-features = false }
mime_guess = "2"
shellexpand = "3.1"
directories = { workspace = true }
fluent = "0.16"
unic-langid = "0.9"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[build-dependencies]
serde_json = { version = "1.0", default-features = false, features = ["std"] }
