[package]
name = "zerorelay"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "ZeroClaw nominated relay: a standalone blind forwarder that tunnels the inner client<->daemon mTLS without decrypting it."
publish = false

[[bin]]
name = "zerorelay"
path = "src/main.rs"

[lib]
name = "zerorelay"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.50", default-features = false, features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
serde_json = "1.0"
zeroclaw-relay-proto = { workspace = true }

[dev-dependencies]
zeroclaw-tls = { workspace = true }
tokio-rustls = { version = "0.26.4", default-features = false, features = ["ring", "logging", "tls12"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
tempfile = "3.26"
